--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -79,10 +79,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PfPgOZNXG50D",
-        "outputId": "0c9eb2f3-23a5-4068-ee35-f0f44be3b3a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0c9eb2f3-23a5-4068-ee35-f0f44be3b3a2"
       },
       "source": [
         "np.sqrt(10)"
@@ -114,10 +114,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "q2hpV5uhG50E",
-        "outputId": "b2592a20-b6f3-4edc-90c9-b2e0bf602f36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b2592a20-b6f3-4edc-90c9-b2e0bf602f36"
       },
       "source": [
         "type(np.sqrt(10))"
@@ -164,10 +164,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WrlJojzPG50F",
-        "outputId": "eec8a53b-a72c-44f1-9166-b7998ccbe995",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "eec8a53b-a72c-44f1-9166-b7998ccbe995"
       },
       "source": [
         "print(x**10)"
@@ -187,10 +187,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sMoTyrkjG50F",
-        "outputId": "3a7497a2-6d8d-480d-cbb9-3e1d13d0ccb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3a7497a2-6d8d-480d-cbb9-3e1d13d0ccb0"
       },
       "source": [
         "type(x**10)"
@@ -237,11 +237,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "P1iN1H9AG50F",
-        "outputId": "fed65958-759c-4f27-ce45-a99eed8411cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "fed65958-759c-4f27-ce45-a99eed8411cc"
       },
       "source": [
         "bin(n) # The bits of n are in the string below, after the '0b'.  "
@@ -267,10 +267,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6VxxehF2G50G",
-        "outputId": "9e09c856-9d21-40d0-e9f3-91d05df22355",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9e09c856-9d21-40d0-e9f3-91d05df22355"
       },
       "source": [
         "print(n)"
@@ -290,10 +290,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xwiiYIZHG50G",
-        "outputId": "95590b97-b348-4f57-e40d-5959aa314ab4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "95590b97-b348-4f57-e40d-5959aa314ab4"
       },
       "source": [
         "print(n*n) # Uh oh overflow."
@@ -332,10 +332,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "CGNI-a7DG50G",
-        "outputId": "a229ed0b-6a4a-4800-cad1-b5a8bdfe64f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a229ed0b-6a4a-4800-cad1-b5a8bdfe64f4"
       },
       "source": [
         "print(np.e)"
@@ -355,10 +355,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "QMvHz4nVG50G",
-        "outputId": "96d1e6a9-4533-4634-91fe-ddbab7b7be58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "96d1e6a9-4533-4634-91fe-ddbab7b7be58"
       },
       "source": [
         "print(np.pi)"
@@ -378,10 +378,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Yx2vgQLSG50G",
-        "outputId": "847f4103-ce39-4bed-f145-357eb0563bd5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "847f4103-ce39-4bed-f145-357eb0563bd5"
       },
       "source": [
         "print(np.euler_gamma) # The harmonic sum minus the logarithm, remember?"
@@ -410,10 +410,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "oFz-Pg4aG50H",
-        "outputId": "496a38bc-64a8-441e-e850-71663bb1df72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "496a38bc-64a8-441e-e850-71663bb1df72"
       },
       "source": [
         "np.sin(np.pi / 4) # What will this be?  Remember precalculus?"
@@ -436,10 +436,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "U9wfP0R-G50H",
-        "outputId": "846c1aa4-ef5d-4403-e97d-df7945e048f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "846c1aa4-ef5d-4403-e97d-df7945e048f2"
       },
       "source": [
         "np.sqrt(2) / 2 # For comparison.  Note the little deviation from above... these can add up!!"
@@ -462,10 +462,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "SAM1qy_iG50H",
-        "outputId": "affff01f-3e14-48fa-9bd1-ac834c892dd3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "affff01f-3e14-48fa-9bd1-ac834c892dd3"
       },
       "source": [
         "np.arctan(1) # The arctangent, or inverse tangent function"
@@ -488,10 +488,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Rzxk9OWlG50H",
-        "outputId": "9b7d09d7-96ec-4251-fb67-1ed9fe9ba9d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9b7d09d7-96ec-4251-fb67-1ed9fe9ba9d1"
       },
       "source": [
         "np.pi / 4"
@@ -514,10 +514,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9vw840QfG50H",
-        "outputId": "444e7ef6-9695-41cb-fdbe-5876d52e59ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "444e7ef6-9695-41cb-fdbe-5876d52e59ee"
       },
       "source": [
         "np.hypot(3,4) # Guess what this does!"
@@ -553,10 +553,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "braipmb9G50I",
-        "outputId": "3a8f0002-a51e-4c0c-f651-f0a1c643b9ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3a8f0002-a51e-4c0c-f651-f0a1c643b9ef"
       },
       "source": [
         "L = np.array([1,2,3,4,5,6,7,8,9,10]) # Make a NumPy array from a list of numbers.\n",
@@ -577,10 +577,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bplXlKrSG50I",
-        "outputId": "c4f17d2e-1e4a-4243-eaa9-b77b9fc8c449",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c4f17d2e-1e4a-4243-eaa9-b77b9fc8c449"
       },
       "source": [
         "print([1,2,3,4,5,6,7,8,9,10]) # But a Python list is printed with commas."
@@ -600,10 +600,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "G8rpAI6VG50I",
-        "outputId": "56cbfae9-fffa-4d17-c226-d6f55f104e40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "56cbfae9-fffa-4d17-c226-d6f55f104e40"
       },
       "source": [
         "print(L[0])  # NumPy arrays are indexed like plain-Python arrays.  Start at zero."
@@ -623,10 +623,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-c82_FLbG50I",
-        "outputId": "3b086071-cc5c-48ff-e4ca-e48b966d1512",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3b086071-cc5c-48ff-e4ca-e48b966d1512"
       },
       "source": [
         "print(L[-1]) # Familiar Python indexing tricks are supported."
@@ -646,10 +646,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "tynZI_jEG50I",
-        "outputId": "a2495883-3cd5-4535-e1a4-972c1331772a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a2495883-3cd5-4535-e1a4-972c1331772a"
       },
       "source": [
         "type(L) # But really, L is not a list!  It's a numpy.ndarray"
@@ -672,10 +672,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "AFopmu7mG50J",
-        "outputId": "0872287d-ee93-4098-ddd2-ed8ad3d26cca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0872287d-ee93-4098-ddd2-ed8ad3d26cca"
       },
       "source": [
         "type(L[0]) # NumPy is treating the terms with numpy types.  int64 is a 64-bit signed integer type."
@@ -698,10 +698,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "XJYk7ZdxG50J",
-        "outputId": "5a0cf9a5-bac4-45d1-a15d-83474118624c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5a0cf9a5-bac4-45d1-a15d-83474118624c"
       },
       "source": [
         "print(L[1::3]) # Python list slices are supported in NumPy arrays."
@@ -732,10 +732,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PHaATagdG50J",
-        "outputId": "2be24c1d-1e93-454d-d02d-b4f48e454495",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2be24c1d-1e93-454d-d02d-b4f48e454495"
       },
       "source": [
         "L + L # What would this do for a list?"
@@ -758,10 +758,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "km0mDD8qG50J",
-        "outputId": "b1a6e94e-edf8-4a57-ab2b-d550faa0222b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b1a6e94e-edf8-4a57-ab2b-d550faa0222b"
       },
       "source": [
         "7 * L # What would this do for a list?"
@@ -784,10 +784,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3mf5wWzCG50J",
-        "outputId": "c86226ee-7d1e-40b1-84ef-8375e6f02653",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c86226ee-7d1e-40b1-84ef-8375e6f02653"
       },
       "source": [
         "L * L # What would this do for a list?"
@@ -810,10 +810,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vkRj5WjBG50K",
-        "outputId": "c26ebd92-96a9-4908-9689-7ca32a773437",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c26ebd92-96a9-4908-9689-7ca32a773437"
       },
       "source": [
         "np.sin(L) # What would this do for a list?"
@@ -848,10 +848,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "VzUACpuMG50K",
-        "outputId": "62b0fe71-eba9-4e82-c908-445bcb0b92a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "62b0fe71-eba9-4e82-c908-445bcb0b92a9"
       },
       "source": [
         "M = np.array([1,2.5,3])  # It looks like an int, float, and int.\n",
@@ -875,10 +875,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EnrygH9XG50K",
-        "outputId": "f2d4656e-f73f-4f5c-d4cf-4d382002ce38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f2d4656e-f73f-4f5c-d4cf-4d382002ce38"
       },
       "source": [
         "N = [1, 2.5, 3]\n",
@@ -911,10 +911,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "YxkIMS5AG50K",
-        "outputId": "07cc6e2b-fa26-409e-be83-d62dc25a43bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "07cc6e2b-fa26-409e-be83-d62dc25a43bf"
       },
       "source": [
         "O = np.array([False, 2.5, 'Hello']) # NumPy has its own string type too.\n",
@@ -938,10 +938,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "R_T6mGsrHhi2",
-        "outputId": "3fb5efa3-8fa3-4386-ff26-8a2cb4012831",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3fb5efa3-8fa3-4386-ff26-8a2cb4012831"
       },
       "source": [
         "print(O) # Look at what numpy has done to O!"
@@ -961,10 +961,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-yClO2YYG50L",
-        "outputId": "1fec0c6b-6f27-40e0-8b37-b132ec56176d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1fec0c6b-6f27-40e0-8b37-b132ec56176d"
       },
       "source": [
         "P = np.array([1, [2,3]]) # NumPy will not be happy with this.  "
@@ -1011,10 +1011,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "AxofGzVIG50L",
-        "outputId": "77319669-21b3-406b-8da6-29fb4ba0e6ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "77319669-21b3-406b-8da6-29fb4ba0e6ad"
       },
       "source": [
         "np_square_roots = np.sqrt(np.arange(1,100))\n",
@@ -1050,7 +1050,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "$\\implies$ Only one line of code was needed."
+        "$\\implies$ *Only one line of code was needed.*"
       ],
       "metadata": {
         "id": "jcVGcP8MwdVl"
@@ -1082,11 +1082,11 @@
         "%timeit np.sqrt(np.arange(1,100))"
       ],
       "metadata": {
-        "id": "l6UK7wktvLBk",
-        "outputId": "d5e1e395-fd3d-41f5-f2ef-ab49e100b564",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l6UK7wktvLBk",
+        "outputId": "d5e1e395-fd3d-41f5-f2ef-ab49e100b564"
       },
       "execution_count": 62,
       "outputs": [
@@ -1109,11 +1109,11 @@
         "%timeit doCalc()"
       ],
       "metadata": {
-        "id": "WGB_jas2uAB0",
-        "outputId": "7caeee4a-9fe3-4602-c1c4-8e074073292b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WGB_jas2uAB0",
+        "outputId": "7caeee4a-9fe3-4602-c1c4-8e074073292b"
       },
       "execution_count": 64,
       "outputs": [
@@ -1129,10 +1129,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "$\\implies$ Using Python lists took a significantly more time than numpy arrays."
+        "$\\implies$ *Using Python lists took a significantly more time than numpy arrays.*"
       ],
       "metadata": {
         "id": "uO5Nhp-GwKh7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Exercise 3**"
+      ],
+      "metadata": {
+        "id": "4YOqQEEnw3kf"
       }
     },
     {
