--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -1145,6 +1145,94 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "L = list(range(1,11))\n",
+        "L1 = L + L\n",
+        "print(L1)"
+      ],
+      "metadata": {
+        "id": "TnO_LVEwxMaY",
+        "outputId": "e3396620-7983-4e8a-8147-2c9c3e274371",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L2 = 7*L\n",
+        "print(L2)"
+      ],
+      "metadata": {
+        "id": "QM9NWMXqxb0G",
+        "outputId": "cd59afd2-65dc-42f9-8e7c-3e7c312177ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L3 = L*L"
+      ],
+      "metadata": {
+        "id": "zt6wIGkbxgmi",
+        "outputId": "0f698af9-bc86-4d38-c8d8-81b49842c664",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 169
+        }
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-71-f30d65dd0c68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mL3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\implies$ `L+L` appends the list to the end of itself. `7*L` appends seven lists of `L` together. `L*L` produces a TypeError.\n",
+        "\n",
+        "$\\implies$ If `L` were a numpy array, then `L+L` would be element-wise addition between two arrays of `L`. `7*L` would produce the array `L` scaled by 7. `L*L` would produce element-wise multiplication between two arrays of `L`."
+      ],
+      "metadata": {
+        "id": "pH8Xeh_rxqaK"
+      }
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "q2FM0Vk8G50L"
