--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -1152,11 +1152,11 @@
         "print(L1)"
       ],
       "metadata": {
-        "id": "TnO_LVEwxMaY",
-        "outputId": "e3396620-7983-4e8a-8147-2c9c3e274371",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TnO_LVEwxMaY",
+        "outputId": "e3396620-7983-4e8a-8147-2c9c3e274371"
       },
       "execution_count": 68,
       "outputs": [
@@ -1176,11 +1176,11 @@
         "print(L2)"
       ],
       "metadata": {
-        "id": "QM9NWMXqxb0G",
-        "outputId": "cd59afd2-65dc-42f9-8e7c-3e7c312177ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QM9NWMXqxb0G",
+        "outputId": "cd59afd2-65dc-42f9-8e7c-3e7c312177ed"
       },
       "execution_count": 69,
       "outputs": [
@@ -1199,12 +1199,12 @@
         "L3 = L*L"
       ],
       "metadata": {
-        "id": "zt6wIGkbxgmi",
-        "outputId": "0f698af9-bc86-4d38-c8d8-81b49842c664",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 169
-        }
+        },
+        "id": "zt6wIGkbxgmi",
+        "outputId": "0f698af9-bc86-4d38-c8d8-81b49842c664"
       },
       "execution_count": 71,
       "outputs": [
@@ -1230,6 +1230,54 @@
       ],
       "metadata": {
         "id": "pH8Xeh_rxqaK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Exercise 4**"
+      ],
+      "metadata": {
+        "id": "vDdSxsFm1E5A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.array(['a', 0.1]) #String and Float\n",
+        "print(type(a[1]))\n",
+        "b = np.array([0.1, 0]) #Float and Int\n",
+        "print(type(b[1]))\n",
+        "c = np.array([0, True]) #Int and Bool\n",
+        "print(type(c[1]))"
+      ],
+      "metadata": {
+        "id": "oF1oqW532x8-",
+        "outputId": "1ff5a4b0-4d4d-4e58-c1ea-a42908c7f863",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'numpy.str_'>\n",
+            "<class 'numpy.float64'>\n",
+            "<class 'numpy.int64'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\implies$ The order of coercion is: Strings > Floats > Integers > Boolean."
+      ],
+      "metadata": {
+        "id": "T1uAC1uD1HwV"
       }
     },
     {
