--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -2613,6 +2613,89 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**Exercise 1**"
+      ],
+      "metadata": {
+        "id": "yjHw-VvX_CdI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = np.array(np.arange(1,13))"
+      ],
+      "metadata": {
+        "id": "2Vi5qYh2_EwA"
+      },
+      "execution_count": 162,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Two dimensional arrays:"
+      ],
+      "metadata": {
+        "id": "XE_LNcX9_i-F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TwoD_1 = np.reshape(numbers,(2,6))\n",
+        "TwoD_2 = np.reshape(numbers,(3,4))\n",
+        "TwoD_3 = np.reshape(numbers,(4,3))\n",
+        "TwoD_4 = np.reshape(numbers,(6,2))\n",
+        "\n",
+        "print(TwoD_1)\n",
+        "print(TwoD_2)\n",
+        "print(TwoD_3)\n",
+        "print(TwoD_4)\n"
+      ],
+      "metadata": {
+        "id": "mSVRM2Yy_lfT",
+        "outputId": "2bc9ce04-90be-4daa-c0ab-0b597a6db6c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3  4  5  6]\n",
+            " [ 7  8  9 10 11 12]]\n",
+            "[[ 1  2  3  4]\n",
+            " [ 5  6  7  8]\n",
+            " [ 9 10 11 12]]\n",
+            "[[ 1  2  3]\n",
+            " [ 4  5  6]\n",
+            " [ 7  8  9]\n",
+            " [10 11 12]]\n",
+            "[[ 1  2]\n",
+            " [ 3  4]\n",
+            " [ 5  6]\n",
+            " [ 7  8]\n",
+            " [ 9 10]\n",
+            " [11 12]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Three Dimensional Arrays:"
+      ],
+      "metadata": {
+        "id": "CFwsKA4bAzkf"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "iQZKmbIbG50T"
       },
