--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -2654,11 +2654,11 @@
         "print(TwoD_4)\n"
       ],
       "metadata": {
-        "id": "mSVRM2Yy_lfT",
-        "outputId": "2bc9ce04-90be-4daa-c0ab-0b597a6db6c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mSVRM2Yy_lfT",
+        "outputId": "2bc9ce04-90be-4daa-c0ab-0b597a6db6c8"
       },
       "execution_count": 172,
       "outputs": [
@@ -2692,6 +2692,63 @@
       ],
       "metadata": {
         "id": "CFwsKA4bAzkf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ThreeD_1 = np.reshape(numbers,(2, 2, 3))\n",
+        "ThreeD_2 = np.reshape(numbers,(2, 3, 2))\n",
+        "ThreeD_3 = np.reshape(numbers,(3, 2, 2))\n",
+        "\n",
+        "print(ThreeD_1)\n",
+        "print(ThreeD_2)\n",
+        "print(ThreeD_3)\n"
+      ],
+      "metadata": {
+        "id": "8yg0s2cYA-Be",
+        "outputId": "1da1e8ed-2bdd-4bc1-ada1-42ecd284769b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 1  2  3]\n",
+            "  [ 4  5  6]]\n",
+            "\n",
+            " [[ 7  8  9]\n",
+            "  [10 11 12]]]\n",
+            "[[[ 1  2]\n",
+            "  [ 3  4]\n",
+            "  [ 5  6]]\n",
+            "\n",
+            " [[ 7  8]\n",
+            "  [ 9 10]\n",
+            "  [11 12]]]\n",
+            "[[[ 1  2]\n",
+            "  [ 3  4]]\n",
+            "\n",
+            " [[ 5  6]\n",
+            "  [ 7  8]]\n",
+            "\n",
+            " [[ 9 10]\n",
+            "  [11 12]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\implies$ The Three dimensional array appears to be the prime factorization of 12, meaning it cannot be broken down differently than $2^2\\cdot3$."
+      ],
+      "metadata": {
+        "id": "leYfvwf1BgLn"
       }
     },
     {
