--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -2688,6 +2688,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "$\\implies$ Given the nature of the matrix being rectangular in shape, each row and column must simultaneously multiply together to give us 12. Factors of 12 include 6, 4, 3, and 2."
+      ],
+      "metadata": {
+        "id": "c8tXpwEvCVyv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Three Dimensional Arrays:"
       ],
       "metadata": {
@@ -2706,11 +2715,11 @@
         "print(ThreeD_3)\n"
       ],
       "metadata": {
-        "id": "8yg0s2cYA-Be",
-        "outputId": "1da1e8ed-2bdd-4bc1-ada1-42ecd284769b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8yg0s2cYA-Be",
+        "outputId": "1da1e8ed-2bdd-4bc1-ada1-42ecd284769b"
       },
       "execution_count": 175,
       "outputs": [
