--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -2775,30 +2775,44 @@
         "square_array = np.reshape(np.arange(0,100), (10,10))\n",
         "square_array_new = np.zeros((10,10))\n",
         "\n",
+        "print(\"Original:\")\n",
+        "print(square_array)\n",
+        "\n",
         "square_array = square_array[::-1]\n",
         "\n",
         "for i in range(10):\n",
         "  square_array_new[:,i] = square_array[i,:]\n",
         "\n",
-        "print(\"Original:\")\n",
+        "print(\"Reverse row-order:\")\n",
         "print(square_array)\n",
         "print(\"Transpose:\")\n",
         "print(square_array_new)"
       ],
       "metadata": {
-        "id": "FO9zk3aFDyWK",
-        "outputId": "4fdefcf8-0a8a-49f2-bf85-83ed7904090a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FO9zk3aFDyWK",
+        "outputId": "6ee7a491-c62d-4034-d4f1-1f25e5d29f29"
       },
-      "execution_count": 251,
+      "execution_count": 255,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Original:\n",
+            "[[ 0  1  2  3  4  5  6  7  8  9]\n",
+            " [10 11 12 13 14 15 16 17 18 19]\n",
+            " [20 21 22 23 24 25 26 27 28 29]\n",
+            " [30 31 32 33 34 35 36 37 38 39]\n",
+            " [40 41 42 43 44 45 46 47 48 49]\n",
+            " [50 51 52 53 54 55 56 57 58 59]\n",
+            " [60 61 62 63 64 65 66 67 68 69]\n",
+            " [70 71 72 73 74 75 76 77 78 79]\n",
+            " [80 81 82 83 84 85 86 87 88 89]\n",
+            " [90 91 92 93 94 95 96 97 98 99]]\n",
+            "Reverse row-order:\n",
             "[[90 91 92 93 94 95 96 97 98 99]\n",
             " [80 81 82 83 84 85 86 87 88 89]\n",
             " [70 71 72 73 74 75 76 77 78 79]\n",
