--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -2848,6 +2848,50 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "rolls = np.random.randint(1, 7, (50,10))\n",
+        "totals = np.sum(rolls, axis=1)\n",
+        "\n",
+        "average = np.average(totals)\n",
+        "standard_deviation = np.std(totals)\n",
+        "\n",
+        "print(totals)\n",
+        "print(\"Average: {}\".format(average))\n",
+        "print(\"Standard deviation: {}\".format(standard_deviation))"
+      ],
+      "metadata": {
+        "id": "qGYlIQ8dLl_t",
+        "outputId": "deb27ac7-5819-46ad-e128-9985ede134f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 269,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[37 27 24 38 34 41 27 29 34 33 27 32 37 25 39 39 43 20 33 28 36 36 40 36\n",
+            " 29 28 25 38 39 39 26 32 43 28 36 35 35 35 29 39 43 38 38 32 33 31 32 33\n",
+            " 39 32]\n",
+            "Average: 33.64\n",
+            "Standard deviation: 5.399111037939486\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Exercise 4**"
+      ],
+      "metadata": {
+        "id": "ghTHG0bYNLy-"
+      }
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "iQZKmbIbG50T"
