--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -2861,11 +2861,11 @@
         "print(\"Standard deviation: {}\".format(standard_deviation))"
       ],
       "metadata": {
-        "id": "qGYlIQ8dLl_t",
-        "outputId": "deb27ac7-5819-46ad-e128-9985ede134f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qGYlIQ8dLl_t",
+        "outputId": "deb27ac7-5819-46ad-e128-9985ede134f2"
       },
       "execution_count": 269,
       "outputs": [
@@ -2890,6 +2890,75 @@
       "metadata": {
         "id": "ghTHG0bYNLy-"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def matrix_pow(M,e):\n",
+        "  s = M.shape[0]\n",
+        "  if s != M.shape[1]:\n",
+        "    return \"Not a square matrix!\"\n",
+        "  elif e == 0:\n",
+        "    return np.eye(s)\n",
+        "  else:\n",
+        "    return M**e"
+      ],
+      "metadata": {
+        "id": "BzowG3-wNi9w"
+      },
+      "execution_count": 317,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix_M = np.random.randint(1,10,(4,4))\n",
+        "print(\"Original:\")\n",
+        "print(matrix_M)\n",
+        "\n",
+        "print(\"e = 0:\")\n",
+        "print(matrix_pow(matrix_M, 0))\n",
+        "\n",
+        "print(\"e = 2:\")\n",
+        "print(matrix_pow(matrix_M, 2))\n",
+        "\n",
+        "matrix_W = np.random.randint(1,10,(4,3))\n",
+        "print(\"M not square:\")\n",
+        "print(matrix_pow(matrix_W, 0))"
+      ],
+      "metadata": {
+        "id": "ompTz2gaN8eU",
+        "outputId": "9efb0267-a377-44ba-ca01-d610abf8c2cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 318,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original:\n",
+            "[[2 9 2 5]\n",
+            " [5 3 4 5]\n",
+            " [1 4 9 1]\n",
+            " [1 4 7 9]]\n",
+            "e = 0:\n",
+            "[[1. 0. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 0. 1.]]\n",
+            "e = 2:\n",
+            "[[ 4 81  4 25]\n",
+            " [25  9 16 25]\n",
+            " [ 1 16 81  1]\n",
+            " [ 1 16 49 81]]\n",
+            "M not square:\n",
+            "Not a square matrix!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
