--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -2962,6 +2962,74 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**Exercise 5**"
+      ],
+      "metadata": {
+        "id": "PMBmYZLOSiZ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def matrix_exp(M):\n",
+        "  if (M.shape[0] == M.shape[1]):\n",
+        "    M_new = np.zeros((M.shape[0], M.shape[1]))\n",
+        "    for i in range(21):\n",
+        "     M_new = M_new + (matrix_pow(M,i)/np.math.factorial(i))\n",
+        "    return M_new\n",
+        "  else:\n",
+        "    return \"Not a square matrix!\""
+      ],
+      "metadata": {
+        "id": "eXbulS_cT-Xq"
+      },
+      "execution_count": 358,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Original:\")\n",
+        "print(matrix_M)\n",
+        "\n",
+        "print(\"Matrix exponential:\")\n",
+        "print(matrix_exp(matrix_M))\n",
+        "\n",
+        "print(\"Non square matrix:\")\n",
+        "print(matrix_exp(rolls))"
+      ],
+      "metadata": {
+        "id": "6cIrLlatU8v2",
+        "outputId": "77165a01-fc67-42bc-aa0a-310e261fd36d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 361,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original:\n",
+            "[[2 9 2 5]\n",
+            " [5 3 4 5]\n",
+            " [1 4 9 1]\n",
+            " [1 4 7 9]]\n",
+            "Matrix exponential:\n",
+            "[[7.38905610e+00 8.09094244e+03 6.38905610e+00 1.47413147e+02]\n",
+            " [1.47413147e+02 2.00855369e+01 5.35981499e+01 1.47413147e+02]\n",
+            " [1.71828183e+00 5.35981499e+01 8.09194244e+03 1.71828183e+00]\n",
+            " [1.71828183e+00 5.35981499e+01 1.09561726e+03 8.09194244e+03]]\n",
+            "Non square matrix:\n",
+            "Not a square matrix!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "iQZKmbIbG50T"
       },
