--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -5021,11 +5021,11 @@
         "  i = i + 1"
       ],
       "metadata": {
-        "id": "oLffqIUIenmR",
-        "outputId": "b7e0c5db-14d5-4478-f36b-1aa69a19ff3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oLffqIUIenmR",
+        "outputId": "b7e0c5db-14d5-4478-f36b-1aa69a19ff3d"
       },
       "execution_count": 201,
       "outputs": [
@@ -5037,6 +5037,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\implies$ This last exercise was by far the coolest thing ever. Thank you!"
+      ],
+      "metadata": {
+        "id": "3orKTEIljQa_"
+      }
     },
     {
       "cell_type": "code",
