--- a/Classwork_3_9_23.ipynb
+++ b/Classwork_3_9_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOwAB4ANj26qYHSNKJOJ1S",
+      "authorship_tag": "ABX9TyNnRe05aguvHFiRi7jG98Zm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,28 +106,29 @@
       "metadata": {
         "id": "TDKIyqju79hu"
       },
-      "execution_count": 47,
+      "execution_count": 62,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(stay_bounded(.01))"
+        "print(stay_bounded(.001))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9sFJiEv80hh",
-        "outputId": "76ed8fef-8d2a-4186-c967-80ec12662d79"
+        "outputId": "e56f4966-8518-449b-94a5-e08029e1bd2d"
       },
-      "execution_count": 48,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "False\n"
+            "0.19313676042983857\n",
+            "True\n"
           ]
         }
       ]
@@ -167,10 +168,45 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Solution"
+      ],
+      "metadata": {
+        "id": "r3_IdCLOATaY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re_array = np.linspace(-2,2,400)\n",
+        "im_array = np.linspace(-1,1,200)\n",
+        "\n",
+        "c_array = np.add.outer(re_array, im_array*1j)"
+      ],
+      "metadata": {
+        "id": "3fmcbcxX7uoR"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_mandel(num_iter=100):\n",
+        "  arr = np.zeros(c_array.shape)"
+      ],
+      "metadata": {
+        "id": "iJbyZzP2AZjB"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3fmcbcxX7uoR"
+        "id": "zXrVmAyYBOPW"
       },
       "execution_count": null,
       "outputs": []
