--- a/Classwork_3_9_23.ipynb
+++ b/Classwork_3_9_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOS0iittfhIM3iQMUf9ycw0",
+      "authorship_tag": "ABX9TyM+M7oAniwJNAXs4MZ9lItq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -601,6 +601,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##**Bifurcation Diagram (3/12)**"
+      ],
+      "metadata": {
+        "id": "C_EQxLho6mj2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "s = 500 #size of data sxs\n",
@@ -616,7 +625,7 @@
         "temp_pop = bif_pop\n",
         "temp_rate = bif_rate\n",
         "\n",
-        "for i in range(s):  #loop that splits x values accordingly (i.e. 2.7 to 3.7 in increments of .01)\n",
+        "for i in range(s):  #loop that splits x values accordingly (i.e. 2.7 to 3.7 in increments of .01, for s = 100)\n",
         "  bif_x[i] = temp_rate\n",
         "  temp_rate = temp_rate + 1/s\n",
         "\n",
@@ -626,10 +635,10 @@
         "  for j in range(s):\n",
         "    bif_y[i,j] = temp_pop\n",
         "    temp_pop = logistic(temp_pop,temp_rate)\n",
-        "  temp_pop = 0.5\n",
+        "  temp_pop = bif_pop\n",
         "  temp_rate = temp_rate + 1/s\n",
         "\n",
-        "for i in range(s-1):\n",
+        "for i in range(s-1):  #creates x and y values for plotting in scatterplot\n",
         "  for j in range(s-1):\n",
         "    xarray.append(bif_x[i+1])\n",
         "    yarray.append(bif_y[i][j+1])\n",
@@ -651,9 +660,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 592
         },
-        "outputId": "d32e2eac-9409-4c37-9f8c-e6951350fbeb"
+        "outputId": "84f2d2e0-a305-4a33-8da0-264febf1db27"
       },
-      "execution_count": 135,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "display_data",
