--- a/Classwork_3_14_23.ipynb
+++ b/Classwork_3_14_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQ5bbGRta6KwK2KX9KQ63s",
+      "authorship_tag": "ABX9TyPUvQ1xwuxXB0j4kVNnc/mt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,20 @@
       ],
       "metadata": {
         "id": "gUJo2GZna6kX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Matplotlib\n",
+        "\n",
+        "1. What are you visualizing?\n",
+        "2. What questions can be answered by looking at your plot?\n",
+        "3. What labels/marks are needed for your plot to tell the story?\n",
+        "4. What alternatives did you consider for visualizing the same information?"
+      ],
+      "metadata": {
+        "id": "tuqJXPm8cIRM"
       }
     },
     {
